Change "get current user" and "get all buckets"
- Get another user by ID
- Bucket route uses path parameter w/ "me" alias
- Add tests
