# backend/api.yml
@@ -65,19 +65,26 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /users/me/:
+  /users/{user_id}/:
     get:
-      summary: Get current user
-      description: This route retrieves the profile of the user who is currently logged in. Can be used to check if a user is logged in.
+      summary: Get individual user
+      description: This route retrieves the profile of a given user. Can be used to check if the client is logged in.
       tags:
         - User
+      parameters:
+        - name: user_id
+          in: path
+          description: The ID of the user the client wishes to fetch.
+          required: true
+          schema:
+            $ref: '#/components/schemas/UserIDOrMe'
       responses:
         '200':
           description: Retrieved user
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Me'
+                $ref: '#/components/schemas/User'
         default:
           description: Unexpected error
           content:
@@ -136,7 +143,7 @@ paths:
   /users/me/uploads:
     get:
       summary: Get all uploads
-      description: Get a list of the current user's uploads.
+      description: Retrieve a list of the current user's uploads.
       tags:
         - Uploads
       parameters:
@@ -171,7 +178,7 @@ paths:
   /users/{user_id}/uploads:
     get:
       summary: Get another user's uploads
-      description: Get a list of another user's uploads that are visible to the current user.
+      description: Retrieve a list of another user's uploads that are visible to the current user.
       tags:
         - Uploads
       parameters:
@@ -341,10 +348,7 @@ paths:
                   - fields
                 properties:
                   id:
-                    type: integer
-                    format: int64
-                    minimum: 1
-                    description: The newly created upload ID
+                    $ref: '#/components/schemas/UploadID'
                   url:
                     type: string
                     example: "https://s3.us-east-2.amazonaws.com/example"
@@ -392,7 +396,7 @@ paths:
           schema:
             $ref: '#/components/schemas/UploadID'
       responses:
-        '200':
+        '204':
           description: 'Began conversion'
         default:
           description: Unexpected error
@@ -556,21 +560,19 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /buckets:
+  /users/{user_id}/buckets:
     get:
       summary: Get all buckets
-      description: Without any query parameters, get a list of buckets owned by the current user.
+      description: Retrieve a list of buckets owned by a given user.
       tags:
         - Buckets
       parameters:
-        - name: user
-          in: query
-          description: Filter response to buckets owned by a given user ID.
-          required: false
+        - name: user_id
+          in: path
+          description: The user whose comments the client wishes to fetch.
+          required: true
           schema:
-            type: integer
-            format: int64
-            minimum: 1
+            $ref: '#/components/schemas/UserIDOrMe'
       responses:
         '200':
           description: 'Retrieved buckets'
@@ -675,7 +677,7 @@ paths:
                     type: array
                     items:
                         type: object
-                        $ref: "#/components/schemas/UserOverview"
+                        $ref: "#/components/schemas/OtherUser"
         default:
           description: Unexpected error
           content:
@@ -709,7 +711,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/UserOverviewWCourtshipReq'
+                $ref: '#/components/schemas/OtherUserWCourtshipReq'
         default:
           description: Unexpected error
           content:
@@ -721,7 +723,7 @@ paths:
     get:
       summary: Get all courtship requests
       description:
-          Get a list of all users with whom the client has an incoming or outgoing courtship request.
+          Retrieve a list of all users with whom the client has an incoming or outgoing courtship request.
       tags:
         - Courtships
       parameters:
@@ -750,7 +752,7 @@ paths:
                   requests:
                     type: array
                     items:
-                        $ref: '#/components/schemas/UserOverviewWCourtshipReq'
+                        $ref: '#/components/schemas/OtherUserWCourtshipReq'
         default:
           description: Unexpected error
           content:
@@ -821,7 +823,7 @@ paths:
     get:
       summary: Get all courtships
       description:
-          Get a list of all users who have established courtships with a given user.
+          Retrieve a list of all users who have established courtships with a given user.
       tags:
         - Courtships
       parameters:
@@ -850,7 +852,7 @@ paths:
                   courtships:
                     type: array
                     items:
-                        $ref: "#/components/schemas/UserOverviewWCourtship"
+                        $ref: "#/components/schemas/OtherUserWCourtship"
         default:
           description: Unexpected error
           content:
@@ -968,12 +970,12 @@ components:
           description: "Exceptions to the default visibility mode. Any included user will be able to view an upload with this visibility, regardless of the default."
           type: array
           items:
-            $ref: "#/components/schemas/UserOverview"
+            $ref: "#/components/schemas/OtherUser"
 
     Me:
       description: "The currently logged in user. Exposes sensitive profile information."
       allOf:
-        - $ref: "#/components/schemas/UserOverview"
+        - $ref: "#/components/schemas/OtherUser"
         - type: object
           required:
             - email
@@ -1013,7 +1015,7 @@ components:
       description: "A personalized biography."
       example: I couldn't figure out why the ball was getting bigger. Then it hit me.
 
-    UserOverviewNoCourtship:
+    OtherUserNoCourtship:
       type: object
       description: "A building-block for other schemas."
       required:
@@ -1065,11 +1067,11 @@ components:
               minimum: 0
               example: 10
 
-    UserOverview:
+    OtherUser:
       type: object
       description: "A synopsis of a user's profile. What you might find as an identifier to a user's comment or upload."
       allOf:
-        - $ref: "#/components/schemas/UserOverviewNoCourtship"
+        - $ref: "#/components/schemas/OtherUserNoCourtship"
         - type: object
           required:
             - courtship
@@ -1083,11 +1085,11 @@ components:
                 - $ref: "#/components/schemas/Courtship"
                 - $ref: "#/components/schemas/CourtshipReq"
 
-    UserOverviewWCourtship:
+    OtherUserWCourtship:
       type: object
-      description: "A profile synopsis of a user with whom the client has an established courtship."
+      description: "A profile synopsis of another user with whom the client has an established courtship."
       allOf:
-        - $ref: "#/components/schemas/UserOverviewNoCourtship"
+        - $ref: "#/components/schemas/OtherUserNoCourtship"
         - type: object
           required:
             - courtship
@@ -1095,17 +1097,24 @@ components:
             courtship:
               $ref: "#/components/schemas/Courtship"
 
-    UserOverviewWCourtshipReq:
+    OtherUserWCourtshipReq:
       type: object
-      description: "A profile synopsis of a user with whom the client has a pending courtship request."
+      description: "A profile synopsis of another user with whom the client has a pending courtship request."
       allOf:
-        - $ref: "#/components/schemas/UserOverviewNoCourtship"
+        - $ref: "#/components/schemas/OtherUserNoCourtship"
         - type: object
           required:
             - courtship
           properties:
             courtship:
               $ref: "#/components/schemas/CourtshipReq"
+
+    User:
+      type: object
+      description: A profile synposis of a user that may or may not be the client and contain sensitive information.
+      oneOf:
+        - $ref: "#/components/schemas/Me"
+        - $ref: "#/components/schemas/OtherUser"
 
     CourtshipType:
       type: string
@@ -1263,7 +1272,7 @@ components:
               type: string
               format: date-time
             author:
-              $ref: "#/components/schemas/UserOverview"
+              $ref: "#/components/schemas/User"
         - $ref: "#/components/schemas/CommentRequest"
 
     CommentRequest:
